user-setup (0.02) UNRELEASED; urgency=low

  [ Colin Watson ]
  * Fix clearing of encrypted user passwords from the debconf database.
  * Remove a few bits of dead code.
  * Exit with code 10 to back up to main menu, not 30.
  * Use a prebaseconfig script and prompt the user earlier

  [ Christian Perrier ]
  * Add a main menu title
  * Add a template for the prebaseconfig progress bar

 -- Christian Perrier <bubulle@debian.org>  Sat, 26 Nov 2005 14:53:35 +0100

user-setup (0.01) unstable; urgency=low

  [ Christian Perrier ]
  * First release as a udeb broken out from shadow (and base-config)
    and rewritten.

 -- Christian Perrier <bubulle@debian.org>  Sun, 13 Nov 2005 20:07:32 +0100