@@ -5,9 +5,9 @@ is_system_user () {
 	fi
 
         # Assume NIS, or any uid from 1000 to 29999,  means there is a user.
-        if $chroot $ROOT grep -q '^+:' /etc/passwd || \
-           $chroot $ROOT grep -q '^[^:]*:[^:]*:[1-9][0-9][0-9][0-9]:' /etc/passwd || \
-           $chroot $ROOT grep -q '^[^:]*:[^:]*:[12][0-9][0-9][0-9][0-9]:' /etc/passwd; then
+        if grep -q '^+:' $ROOT/etc/passwd || \
+           grep -q '^[^:]*:[^:]*:[1-9][0-9][0-9][0-9]:' $ROOT/etc/passwd || \
+           grep -q '^[^:]*:[^:]*:[12][0-9][0-9][0-9][0-9]:' $ROOT/etc/passwd; then
                 return 0
         else
                 return 1
@@ -17,19 +17,19 @@ is_system_user () {
 # Returns a true value if root already has a password.
 root_password () {
 	# Assume there is a root password if NIS is being used.
-	if $chroot $ROOT grep -q '^+:' /etc/passwd; then
+	if grep -q '^+:' $ROOT/etc/passwd; then
 		return 0
 	fi
 
 	if [ -e $ROOT/etc/shadow ] && \
-	   [ "`$chroot $ROOT grep ^root: /etc/shadow | cut -d : -f 2`" -a \
-	     "`$chroot $ROOT grep ^root: /etc/shadow | cut -d : -f 2`" != '*' ]; then
+	   [ "`grep ^root: $ROOT/etc/shadow | cut -d : -f 2`" -a \
+	     "`grep ^root: $ROOT/etc/shadow | cut -d : -f 2`" != '*' ]; then
 		return 0
 	fi
 	
 	if [ -e $ROOT/etc/passwd ] && \
-		[ "`$chroot $ROOT grep ^root: /etc/passwd | cut -d : -f 2`" ] && \
-		[ "`$chroot $ROOT grep ^root: /etc/passwd | cut -d : -f 2`" != 'x' ]; then
+		[ "`grep ^root: $ROOT/etc/passwd | cut -d : -f 2`" ] && \
+		[ "`grep ^root: $ROOT/etc/passwd | cut -d : -f 2`" != 'x' ]; then
 			return 0
 	fi
 
