@@ -7,10 +7,8 @@ db_settitle user-setup/title
 
 if [ "$1" ]; then
 	ROOT="$1"
-	chroot=chroot
 else
 	ROOT=
-	chroot=
 fi
 export ROOT
 
