@@ -5,6 +5,7 @@ user-setup (0.02) UNRELEASED; urgency=low
   * Remove a few bits of dead code.
   * Exit with code 10 to back up to main menu, not 30.
   * Use a prebaseconfig script and prompt the user earlier
+  * Remove some unnecessary calls to chroot.
 
   [ Christian Perrier ]
   * Add a main menu title
